<resources>
    <string name="app_name">MovieCheck</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_pendings">Plan to Watch</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_user">User or email</string>
    <string name="password">Password</string>
    <string name="register">Sing up</string>
    <string name="login_login">Log in</string>
    <string name="register_title">Enter your data</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="detail_title">Detail</string>
    <string name="detail_info">Info</string>
    <string name="detail_social">Social</string>
    <string name="detail_add_favorites">Add to Favorites</string>
    <string name="detail_add_pendant">Plan to Watch</string>
    <string name="detail_add_rating">Add rating</string>
    <string name="detail_comment">Write your comment here</string>
    <string name="profile_delete_account">Delete account</string>
    <string name="profile_warning">Warning!</string>
    <string name="profile_delete_permanently">Delete permanently</string>
    <string name="password_input">Write your password here</string>
    <string name="email_input">Write your email here</string>
    <string name="user_input">Write your username here</string>
    <string name="password_repeat_input">Repeat your password here</string>
    <string name="title_profile">Profile</string>
    <string name="profile_read">Read carefully before continuing</string>
    <string name="profile_warning_text">You are about to delete your user account. If you decide to continue you will not be able to recover your data, including your favorite and pending movies.</string>
    <string name="profile_cancel">Cancel</string>
    <string name="description_app_icon">Application Icon</string>
    <string name="description_default_profile_picture">Default profile picture</string>
    <string name="description_warning_icon">Warning icon for account delete</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date" translatable="false">-</string>
    <string name="movie_fav_button">Toggle favourite</string>
    <string name="movie_poster">Movie poster</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="movie_pending_button">Toogle pending</string>
    <string name="movie_date">Release date</string>
    <string name="movie_duration">Duration</string>
    <string name="movie_rating_IMDB">Rating TMDB</string>
    <string name="movie_synopsis">Synopsis</string>
    <string name="movie_synopsis_large" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt et arcu sed molestie. Ut enim ipsum, maximus nec pretium ac, venenatis nec nisl. Sed fermentum id nisl vel pharetra. Nullam ut iaculis tortor, porttitor dignissim turpis. Vivamus varius laoreet maximus. Phasellus ac enim gravida, lacinia ipsum et, gravida turpis. Null
    <string name="movie_genres">Genres</string>
...
