...
            app:srcCompat="@drawable/img"
            android:contentDescription="@string/movie_poster" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvMovieTitleDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/movie_title"
        android:textSize="18sp"
...

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tvSynopsisDetail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSynopsisDetail"
        app:layout_constraintTop_toBottomOf="@+id/tvSynopsisDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
...
            android:layout_weight="1"
            android:backgroundTint="@color/red_widgets"
            android:text="@string/detail_add_favorites"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/bTogglePendingDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red_widgets"
            android:text="@string/detail_add_pendant"
            tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />
...
